Changelog
=========

In Development
==============

RestBox WebApiBox v0.3.6 
========================

- New: WebApiBox.RenderAsQueryString() method.

RestBox v0.3.5, MongoBox v0.2
=============================

Released on February 12, 2019.

- New: RestBox.Insert<T>(T item)
- New: MongoStringObjectIdIdGeneratorConvention helper class.
- New: MongoBox.Get<T>(string itemId)
- New: MongoBox.Get<T>(T item)
- New: MongoBox.Insert<T>(T item)

RestBox, WebApi v0.3.4
======================

Released on December 31, 2018.

- New: build net461 specific target.

RestBox, WebApi v0.3.3
======================

Released on December 17, 2018.

- Fix: Don't duplicate heders between requests.

RestBox, WebApi v0.3.2
======================

Released on December 17, 2018.

- New: RestBox.Get<T>(string Id) basic implementation.

RestBox v0.3.1
==============

Released on December 4, 2018.

Redis v0.1
==========

Released on December 3, 2018.

Rest, WebApi v0.3
=================

Released on November 30, 2018

- Fix: RestBox.Insert and Replace don't att Content-Type header.

Core, Rest, WebApi v0.2
=======================

Released on November 29, 2018.

- Fix: robust Uri handling.

Core, Rest, WebApi v0.1
=======================
 
Released on November 22, 2018.

- Initial release.