@@ -1,0 +1,9 @@
+namespace Boxroom.Rest
+{
+
+    public interface IAuthentication
+    {
+        string Username { get; set; }
+        string Password { get; set; }
+    }
+}
