@@ -24,6 +24,7 @@ namespace Test
         {
             Box.BaseAddress = new Uri("https://testme.com");
             Box.DataSources = new Dictionary<Type, string> { { typeof(Class), "endpoint" } };
+            Box.Authentication = new BasicAuthentication { Username = "user", Password = "pw" };
             Box.Headers.Add("Test", "Value");
             Box.HttpClient = new HttpClient(GetMock<Class>(Box));
 
@@ -39,6 +40,7 @@ namespace Test
         {
             Box.BaseAddress = new Uri("https://testme.com");
             Box.DataSources = new Dictionary<Type, string> { { typeof(Class), "endpoint" } };
+            Box.Authentication = new BasicAuthentication { Username = "user", Password = "pw" };
             Box.Headers.Add("Test", "Value");
             Box.HttpClient = new HttpClient(GetMock<Class>(Box));
 
@@ -54,6 +56,7 @@ namespace Test
             var mockHttp = new MockHttpMessageHandler();
 
             mockHttp.When($"{client.BaseAddress.ToString()}{client.DataSources[typeof(T)]}?test=me")
+                .WithHeaders("Authorization", "Basic dXNlcjpwdw==")
                 .WithHeaders("Test", "Value")
                 .WithHeaders("If-Modified-Since", DateTime.Now.Date.ToString("r"))
                 .Respond(HttpStatusCode.OK,
